--- a/css/style.css
+++ b/css/style.css
@@ -90,14 +90,13 @@ form button {
     color: var(--color-white);
     
     border-radius: 7px;
-    box-shadow: 0 4px #269464;
-    
+    box-shadow: 0 8px #00000033;
     cursor: pointer;
 }
 
 form button:hover{
     background-color: #269464;
-    box-shadow: none;
+    box-shadow: 0 8px #00000033;
 
     transition: .4s;
 }
